tests/build/fail/widget_new/no_default_when_assigned3.rs
use zero_ui::core::window::CursorIcon;
use zero_ui::properties::cursor;
use zero_ui::widgets::blank;

fn main() {
    let _ = blank! {
        when self.cursor == CursorIcon::Hand { }
    };
}
